Update HTML structure and image source

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            background-color: white; /* białe tło – zmień na black jeśli wolisz czarne */
+            background-color: white; /* białe tło – możesz zmienić na black jeśli wolisz czarne */
             display: flex;
             justify-content: center;  /* wycentrowanie w poziomie */
             align-items: center;      /* wycentrowanie w pionie */
@@ -20,12 +20,11 @@
             width: auto;
             height: auto;
             display: block;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.3); /* opcjonalnie: lekki cień dla ładniejszego wyglądu */
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3); /* delikatny cień – możesz usunąć jeśli nie chcesz */
         }
     </style>
 </head>
 <body>
-    <img src="certyfikat.PNG" alt="Certyfikat">
+    <img src="Certyfikat.PNG" alt="Certyfikat">
 </body>
-
 </html>
